# Strawberry

./: .gitignore  CMakeLists.txt  Makefile  README.md  globals.cpp  globals.h  go.mod  lex.yy.c  parser.tab.c  parser.tab.h
ast/: ast.cpp  ast.go
ast/ControlFlow/: ast.cpp  ast.h
ast/Functions/: ast.cpp
ast/Variables/: ast.cpp
bytecode/: bytecodegen.go
cmd/lox/: main.go
cmd/strawberry/: main.go
cmd/strawberry/repl/: repl.go
errors/: runtime_error.go
example/: 0-arrays.berry  1-hello-world.berry  5-factorial.berry  6-array-sorting.lox
interpreter/: interpreter.go  interpreter_test.go
lexer/: lexer.go  lexer_test.go
parser/: export.go  parser.go  parser_test.go
resolver/: resolver.go  scopes.go
src/include/: tokens.h
src/lexer/: lexer.cpp  lexer.h  lexer.l  tokens.h  tokens.l
src/parser/: ast.c  ast.h  parser.y  tokens.h
tasks/: 001-bubble-sort.berry  002-factorial.berry  003-era.berry
tests/: lexer_test.cpp  test_input.txt
tests/lexer/: lexer_test.cpp
tests/parser/: parser_test.cpp
token/: token.go
valuer/: valuer.go
vm/: garbagecollector.go  helpers.go  virtualmachine.go  virtualmachinescopes.go
